[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/ui/exitPopup.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/gameOver.gd" type="Script" id=2]
[ext_resource path="res://effects/vignette.png" type="Texture" id=3]
[ext_resource path="res://effects/vignette.shader" type="Shader" id=4]
[ext_resource path="res://sprites/ui/home.png" type="Texture" id=5]
[ext_resource path="res://fonts/space_marine/SM.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://sprites/ui/return.png" type="Texture" id=7]
[ext_resource path="res://sprites/ui/exit.png" type="Texture" id=8]
[ext_resource path="res://sprites/enemy/enemy_ufoPurple_E.png" type="Texture" id=9]
[ext_resource path="res://scenes/ui/statsContainer.tscn" type="PackedScene" id=10]
[ext_resource path="res://fonts/Rubik-Regular.ttf" type="DynamicFontData" id=11]


[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/vignette = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 136
outline_size = 3
outline_color = Color( 0.603922, 0.0196078, 0.0196078, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=6]
resource_name = "game_over"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Game Over/TextureRect:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Game Over/TextureRect2:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, -10.0 ]
}

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vignette" type="ColorRect" parent="."]
modulate = Color( 0.0313726, 0.886275, 1, 1 )
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Over" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -578.0
margin_right = 578.0
margin_bottom = 152.0
rect_scale = Vector2( 1, 1.5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Game Over"]
margin_left = 734.0
margin_top = -590.0
margin_right = 1860.0
margin_bottom = 700.0
rect_pivot_offset = Vector2( 563, 645 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Game Over"]
margin_left = -698.0
margin_top = -590.0
margin_right = 428.0
margin_bottom = 700.0
rect_pivot_offset = Vector2( 563, 645 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" parent="." instance=ExtResource( 10 )]
margin_top = -248.0
margin_bottom = 135.0

[node name="EnemiesKillerContainer" parent="StatsContainer" index="0"]
margin_top = 80.0
margin_bottom = 178.0

[node name="Label" parent="StatsContainer/EnemiesKillerContainer" index="0"]
margin_top = 11.0
margin_bottom = 87.0

[node name="HSeparator" parent="StatsContainer/EnemiesKillerContainer" index="1"]
margin_bottom = 98.0

[node name="Value" parent="StatsContainer/EnemiesKillerContainer" index="2"]
margin_top = 11.0
margin_bottom = 87.0

[node name="ErrorsContainer" parent="StatsContainer" index="1"]
margin_top = 182.0
margin_bottom = 280.0

[node name="Label" parent="StatsContainer/ErrorsContainer" index="0"]
margin_top = 11.0
margin_bottom = 87.0

[node name="HSeparator" parent="StatsContainer/ErrorsContainer" index="1"]
margin_bottom = 98.0

[node name="Value" parent="StatsContainer/ErrorsContainer" index="2"]
margin_top = 11.0
margin_bottom = 87.0

[node name="WordTimeContainer" parent="StatsContainer" index="2"]
margin_top = 284.0
margin_bottom = 383.0

[node name="Label" parent="StatsContainer/WordTimeContainer" index="0"]
margin_top = 11.0
margin_bottom = 87.0

[node name="HSeparator" parent="StatsContainer/WordTimeContainer" index="1"]
margin_bottom = 99.0

[node name="Value" parent="StatsContainer/WordTimeContainer" index="2"]
margin_top = 11.0
margin_bottom = 87.0

[node name="WaveContainer" type="HBoxContainer" parent="StatsContainer"]
margin_right = 1000.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="StatsContainer/WaveContainer"]
margin_right = 175.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 7 )
text = "WAVE"
valign = 1

[node name="HSeparator" type="HSeparator" parent="StatsContainer/WaveContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 179.0
margin_right = 955.0
margin_bottom = 76.0
size_flags_horizontal = 3

[node name="Value" type="Label" parent="StatsContainer/WaveContainer"]
margin_left = 959.0
margin_right = 1000.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 7 )
text = "0"
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.0
margin_top = 195.0
margin_right = 177.0
margin_bottom = 503.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryBtn" type="Button" parent="VBoxContainer"]
margin_right = 354.0
margin_bottom = 100.0
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "RETRY"
icon = ExtResource( 7 )

[node name="HomeBtn" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 354.0
margin_bottom = 204.0
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "HOME"
icon = ExtResource( 5 )

[node name="ExitBtn" type="Button" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 354.0
margin_bottom = 308.0
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "EXIT"
icon = ExtResource( 8 )

[node name="ConfirmationDialog" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "game_over"
anims/game_over = SubResource( 6 )

[node name="StatsDelay" type="Timer" parent="."]
one_shot = true
[connection signal="visibility_changed" from="." to="." method="_on_GameOver_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/RetryBtn" to="." method="_on_RetryBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HomeBtn" to="." method="_on_HomeBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="timeout" from="StatsDelay" to="." method="_on_StatsDelay_timeout"]

[editable path="StatsContainer"]
